--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="src\core\renderer\buffer.h" />
     <ClInclude Include="src\core\renderer\renderer.h" />
     <ClInclude Include="src\core\renderer\shader.h" />
+    <ClInclude Include="src\core\renderer\vertex_array.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
     <ClInclude Include="src\core\app.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="src\core\renderer\graphics_context.h" />
     <ClInclude Include="src\core\startup.h" />
     <ClInclude Include="src\core\window.h" />
+    <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
     <ClInclude Include="src\platform\windows\windows_input.h" />
     <ClInclude Include="src\platform\windows\windows_window.h" />
     <ClInclude Include="src\supch.h" />
@@ -583,6 +585,7 @@
     <ClCompile Include="src\core\renderer\buffer.cpp" />
     <ClCompile Include="src\core\renderer\renderer.cpp" />
     <ClCompile Include="src\core\renderer\shader.cpp" />
+    <ClCompile Include="src\core\renderer\vertex_array.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
     <ClCompile Include="src\core\app.cpp" />
@@ -591,6 +594,7 @@
     <ClCompile Include="src\core\layer.cpp" />
     <ClCompile Include="src\core\layer_stack.cpp" />
     <ClCompile Include="src\core\log.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
     <ClCompile Include="src\platform\windows\windows_input.cpp" />
     <ClCompile Include="src\platform\windows\windows_window.cpp" />
     <ClCompile Include="src\supch.cpp">
