--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -1341,6 +1341,8 @@
     <ClInclude Include="src\core\renderer\buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\core\renderer\renderer.h" />
+    <ClInclude Include="src\core\renderer\vertex_array.h" />
+    <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\app.cpp">
@@ -1375,5 +1377,7 @@
     <ClCompile Include="src\core\renderer\buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\core\renderer\renderer.cpp" />
+    <ClCompile Include="src\core\renderer\vertex_array.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
   </ItemGroup>
 </Project>
